--- a/tmpls/day.html
+++ b/tmpls/day.html
@@ -76,9 +76,9 @@
 <div class="row">
 <form role="form" action="addbooking.php" method ="POST">
 <div class="form-group" >
-<input type="hidden" id="sdate" value=getStartDate() />
+
+<input type="hidden" id="sdate" name="sdate"/>
 <input type="hidden" id="name" value="<?php echo $_SESSION['username'];?>"/>
-<input type="hidden" id="ename" value="<?php echo $_POST['eid'];?>"/>
 <center><button class="btn btn-success" type="submit" >Add a Booking</center>
 </div>
 </div>
