--- a/tmpls/day.html
+++ b/tmpls/day.html
@@ -78,7 +78,7 @@
 <div class="form-group" >
 
 <input type="hidden" id="sdate" name="sdate"/>
-<input type="hidden" id="name" value="<?php echo $_SESSION['username'];?>"/>
+<input type="hidden" id="name" value="<?php echo $_SESSION['user_id']['name'];?>"/>
 <center><button class="btn btn-success" type="submit" >Add a Booking</center>
 </div>
 </div>
