Lot of changes in this commit
1. Added form validation functionality. Proper validation of singup.php
is now occuring.
2. Added validation functionality at addbooking.php, only the ajax
remote validation is not working rest everything is fine.
3. Added the additional check to not allow the user to view a booking
past the current date.
4. Pending works are
a. Dealing with images (addition, saving, display etc;)
b. Proper ajax validation of the addbooking.
c. Trying to encorporate modal
d. adding the edit equipment page
e. validating the settings.php forms
f. Removing the add equipment backend bug

--- a/tmpls/day.html
+++ b/tmpls/day.html
@@ -74,11 +74,12 @@
 </div>
 <br />
 <div class="row">
-<form role="form" action="addbooking.php" method ="POST">
+<form role="form" action="addbooking.php" method ="POST" id="bookingform" name = "bookingform">
 <div class="form-group" >
 
 <input type="hidden" id="sdate" name="sdate"/>
 <input type="hidden" id="name" value="<?php echo $_SESSION['user_id']['name'];?>"/>
-<center><button class="btn btn-success" type="submit" >Add a Booking</center>
+<center><button class="btn btn-success" type="submit" id="addbooking" name="addbooking" >Add a Booking</center>
+</form>
 </div>
 </div>
